force-app/main/default/objects/Mapping_Field__mdt/Mapping_Field__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata contains what element in a section of an import message will be mapped to what Salesforce field.</description>
    <label>Mapping Field</label>
    <pluralLabel>Mapping Fields</pluralLabel>
</CustomObject>