force-app/main/default/objects/Mapping_Field__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the mapping will be used.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>