force-app/main/default/objects/Mapping_Field__mdt/fields/Is_Collection__c.field-meta.xml
<CustomField>
    <fullName>Is_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if the node is a collection of values</description>
    <label>Is Collection</label>
    <type>Checkbox</type>
</CustomField>