force-app/main/default/objects/Mapping_Field__mdt/fields/Mapping_Object__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Object__c</fullName>
    <label>Mapping Object</label>
    <referenceTo>Mapping_Object__mdt</referenceTo>
    <relationshipLabel>Mapping Fields</relationshipLabel>
    <relationshipName>Mapping_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>