force-app/main/default/objects/Mapping_Field__mdt/fields/Message_Payload_Node__c.field-meta.xml
<CustomField>
    <fullName>Message_Payload_Node__c</fullName>
    <description>This field contains the node in the import message that will be saved in Salesforce</description>
    <label>Message Payload Node</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>