force-app/main/default/objects/Mapping_Field__mdt/fields/Salesforce_Field__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field__c</fullName>
    <description>This field contains the Salesforce field where the node will be saved.</description>
    <label>Salesforce Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>