force-app/main/default/objects/Mapping_Field__mdt/fields/Transformation_Classname__c.field-meta.xml
<CustomField>
    <fullName>Transformation_Classname__c</fullName>
    <description>This field contains the classname of the class that will transform a field from the import message payload.
The class needs to import the interface Import_Field_Transformation_Interface.</description>
    <label>Transformation Classname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>